<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/EditText_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/editText_username"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color"/>

        <EditText
            android:id="@+id/EditText_email2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/EditText_email"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/confirmemailaddress"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color"/>

        <EditText
            android:id="@+id/EditText_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/EditText_email2"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color"/>

        <RelativeLayout
            android:id="@+id/rel_spinner"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_below="@+id/EditText_password"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/spinner_operator"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@drawable/edittextstyle"
                android:paddingRight="35dp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/dwnbtn" />
        </RelativeLayout>

        <EditText
            android:id="@+id/EditText_mobile"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/EditText_password"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/rel_spinner"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color"/>

        <EditText
            android:id="@+id/EditText_phone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/EditText_mobile"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/EditText_address"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/EditText_phone"
            android:layout_alignRight="@+id/EditText_phone"
            android:layout_below="@+id/EditText_phone"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/address_small"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scrollHorizontally="false"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color"/>


        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/EditText_address"
            android:layout_alignRight="@+id/EditText_address"
            android:layout_below="@+id/EditText_address"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:paddingRight="35dp" />


        <EditText
            android:id="@+id/EditText_country"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/spinner_city"
            android:layout_alignRight="@+id/spinner_city"
            android:layout_below="@+id/spinner_city"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="Country"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_text"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/but_register"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/EditText_country"
            android:layout_below="@+id/EditText_country"
            android:layout_marginTop="15dp"
            android:background="@drawable/submit_btn"
            android:text="SIGN UP"
            android:textColor="@color/button_title_color" />

        <TextView
            android:id="@+id/TextView033"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_below="@+id/but_register"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_view"
            android:textSize="12sp" />
    </RelativeLayout>

</ScrollView>
