<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#000000"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/list_row_background1"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView_laundry_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:text="Laundry Name"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_laundry_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView_laundry_name"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="Reviews"
                android:textColor="@color/text_color"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button_rate"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_selector"
                android:padding="2dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView_laundry_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView_laundry_review"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/button_rate"
                android:layout_marginRight="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text=" Votes"
                android:textColor="@color/text_color"
                android:textSize="13sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@color/btn_bgcolor"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/lay_call"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/first" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/call"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_bookmark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/second" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/service"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/third" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rate"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/layout1"
            android:layout_margin="10dp"
            android:background="@drawable/edittextstyle"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/textView_detail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/layout1"
            android:layout_margin="10dp"
            android:text=""
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/textView_detail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/layout1"
            android:layout_margin="10dp"
            android:text=""
            android:textColor="@color/text_color" />

    </RelativeLayout>


    <fragment
        android:id="@+id/map"

        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/button_pick_up_request"
        android:layout_width="140dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/map"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:padding="5dp"
        android:text="@string/pickuprequest"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/button_pick_up_request"
        android:layout_marginLeft="5dp"
        android:background="@drawable/button_selector"
        android:padding="5dp"
        android:text="@string/ratecard"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>